--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "moment": "^2.22.2",
@@ -13,6 +15,7 @@
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
+    "url-parse": "^1.4.4",
     "uuid": "^3.3.2",
     "validator": "^10.8.0"
   },
@@ -22,7 +25,9 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "husky": "^1.1.2",
+    "jest": "^24.5.0",
     "lint-staged": "^7.3.0",
+    "nodemon": "^1.18.10",
     "prettier": "^1.14.3"
   },
   "lint-staged": {
@@ -33,13 +38,11 @@
   },
   "scripts": {
     "precommit": "lint-staged",
-    "start": "node ./server/index.js",
-    "server:prod": "cross-env PORT=3001 NODE_ENV=production nodemon -w ./server ./server/index.js",
-    "server:dev": "cross-env PORT=3001 NODE_ENV=dev nodemon -w ./server ./server/index.js",
-    "server:automation": "cross-env PORT=3001 NODE_ENV=test nodemon -w ./server ./server/index.js",
-    "server:test": "cross-env NODE_ENV=test jest --env=node --testPathPattern=server --watch --i",
-    "server:coverage": "cross-env NODE_ENV=test jest --env=node --testPathPattern=/server --coverage --collectCoverageFrom=server/**/*.{js,jsx,mjs} --i --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env PORT=3001 NODE_ENV=production nodemon -w ./src ./src/index.js",
+    "dev": "cross-env PORT=3001 NODE_ENV=dev nodemon -w ./src ./src/index.js",
+    "test": "cross-env NODE_ENV=test jest --env=node --testPathPattern=src --watch --i",
+    "test:automation": "cross-env PORT=3001 NODE_ENV=test nodemon -w ./src ./src/index.js",
+    "test:coverage": "cross-env NODE_ENV=test jest --env=node --testPathPattern=src --coverage --collectCoverageFrom=server/**/*.{js,jsx,mjs} --i --watch"
   },
   "repository": {
     "type": "git",
