--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,16 @@
 {
   "env": {
-    "node": true
+    "node": true,
+    "jest": true
   },
-  "extends": "airbnb-base"
+  "extends": [
+    "airbnb-base",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier"
+  ],
+  "rules": {
+    "no-underscore-dangle": "off"
+  }
 }
