--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "precommit": "lint-staged",
     "start": "cross-env PORT=3001 NODE_ENV=production nodemon -w ./src ./src/index.js",
     "dev": "cross-env PORT=3001 NODE_ENV=dev nodemon -w ./src ./src/index.js",
-    "test": "cross-env NODE_ENV=test jest --env=node --testPathPattern=src --watch --i",
+    "test": "cross-env NODE_ENV=test jest --env=node --testPathPattern=src --watch --no-watchman",
     "test:automation": "cross-env PORT=3001 NODE_ENV=test nodemon -w ./src ./src/index.js",
     "test:coverage": "cross-env NODE_ENV=test jest --env=node --testPathPattern=src --coverage --collectCoverageFrom=server/**/*.{js,jsx,mjs} --i --watch"
   },
