--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -14,6 +15,7 @@
     "morgan": "^1.9.1",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "url-parse": "^1.4.4",
     "uuid": "^3.3.2",
