--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.22.2",
     "mongoose": "^4.13.18",
     "morgan": "^1.9.1",
-    "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
     "url-parse": "^1.4.4",
