--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "jsdom": "^16.0.1",
     "mailgun-js": "^0.22.0",
     "moment": "^2.22.2",
     "mongoose": "^5.7.5",
