--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "scripts": {
     "precommit": "lint-staged",
-    "start": "cross-env PORT=3001 NODE_ENV=production node ./src/index.js",
+    "start": "cross-env NODE_ENV=production node ./src/index.js",
+    "start:dev": "cross-env PORT=3001 NODE_ENV=production node ./src/index.js",
     "start-beta": "cross-env PORT=3002 NODE_ENV=beta node ./src/index.js",
     "dev": "cross-env PORT=3001 NODE_ENV=dev nodemon -w ./src ./src/index.js",
     "test": "cross-env NODE_ENV=test jest --env=node --testPathPattern=src --watch --no-watchman",
